--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "json-server --watch db.json --port 5000",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
